[package]
name = "rust_webhook"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/snekxs/Rust-Webhooks"
homepage = "https://github.com/snekxs/Rust-Webhooks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = "0.11.18"
serde_json = "1.0.96"