[package]
name = "rust_webhook"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/snekxs/Rust-Webhooks"
homepage = "https://github.com/snekxs/Rust-Webhooks"
description = "The program is a utility crate that provides a function to send a webhook request with JSON content using the Reqwest library in Rust. It simplifies the process of sending HTTP POST requests to webhook URLs by handling JSON serialization and request configuration."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = "0.11.18"
serde_json = "1.0.96"